test(media): 실제 이미지 binding 잠금 경합 검증 (#190)